Creation of Terraria instances
They aren't saved in the database yet, but they are created in the file system.