@@ -3,7 +3,6 @@ package io.github.mewore.tsw.jpa.converters;
 import javax.persistence.AttributeConverter;
 import javax.persistence.Converter;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Converter(autoApply = true)
 public class PathConverter implements AttributeConverter<Path, String> {
@@ -15,6 +14,6 @@ public class PathConverter implements AttributeConverter<Path, String> {
 
     @Override
     public Path convertToEntityAttribute(final String dbData) {
-        return Paths.get(dbData);
+        return Path.of(dbData);
     }
 }
